fix(pages): relative favicon path for GitHub Pages base

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Jewelbellery — fine jewellery crafted for every moment. Explore rings, pendants, earrings and bracelets with fast delivery to your doorstep." />
     <title>JewelBellery • Fine Jewellery</title>
